import "ydb/core/protos/counters.proto";

package NKikimr.NOlapShard;
option java_package = "ru.yandex.kikimr.proto";

option (TabletTypeName) = "OlapShard"; // Used as prefix for all counters

enum ESimpleCounters {
    COUNTER_SIMPLE_IGNORE = 0;
}

enum ECumulativeCounters {
    COUNTER_CUMULATIVE_IGNORE = 0;
    COUNTER_BEGIN_OLAP_TX_SUCCESS = 1                       [(CounterOpts) = {Name: "BeginOlapTxSuccess"}];
    COUNTER_BEGIN_OLAP_TX_FAIL = 2                          [(CounterOpts) = {Name: "BeginOlapTxFail"}];
    COUNTER_COMMIT_OLAP_TX_SUCCESS = 3                      [(CounterOpts) = {Name: "CommitOlapTxSuccess"}];
    COUNTER_COMMIT_OLAP_TX_FAIL = 4                         [(CounterOpts) = {Name: "CommitOlapTxFail"}];

}

enum EPercentileCounters {
    option (GlobalCounterOpts) = {
        Ranges { Value: 0      Name: "0 ms"      }
        Ranges { Value: 1      Name: "1 ms"      }
    };

    COUNTER_PERCENTILE_IGNORE = 0;
}

enum ETxTypes {
    TXTYPE_INIT = 0                                         [(TxTypeOpts) = {Name: "TxInit"}];
    TXTYPE_INIT_SCHEMA = 1                                  [(TxTypeOpts) = {Name: "TxInitSchema"}];
    TXTYPE_UPDATE_SCHEMA = 2                                [(TxTypeOpts) = {Name: "TxUpdateSchema"}];
    TXTYPE_BEGIN_OLAP_TX = 3                                [(TxTypeOpts) = {Name: "TxBeginOlapTx"}];
    TXTYPE_COMMIT_OLAP_TX = 4                               [(TxTypeOpts) = {Name: "TxCommitOlapTx"}];
    TXTYPE_PROPOSE = 5                                      [(TxTypeOpts) = {Name: "TxPropose"}];
    TXTYPE_PLANSTEP = 6                                     [(TxTypeOpts) = {Name: "TxPlanStep"}];
    TXTYPE_NOTIFY_TX_COMPLETION = 7                         [(TxTypeOpts) = {Name: "TxNotifyTxCompletion"}];
    TXTYPE_COMMIT_UPDATE_LAST_TXID = 8                      [(TxTypeOpts) = {Name: "TxCommitUpdateLastTxId"}];
    TXTYPE_COMMIT_UPDATE_PREPARED = 9                       [(TxTypeOpts) = {Name: "TxCommitUpdatePrepared"}];
    TXTYPE_COMMIT_FINISHED = 10                             [(TxTypeOpts) = {Name: "TxCommitFinished"}];
    TXTYPE_ATTACH_TX_COLUMN_SHARDS = 11                     [(TxTypeOpts) = {Name: "TxAttachTxColumnShards"}];
    TXTYPE_PROPOSE_CANCEL = 12                              [(TxTypeOpts) = {Name: "TxProposeCancel"}];
}
